# benford

./: .gitignore  README.md  setup.cfg  setup.py  test-requirements.txt  tox.ini
benford/: main.py
benford/tests/: test_main.py
