[metadata]
name = benford
description = Demonstration of Benford's law
description-file =
    README.md
author = Stephen Pearson
author-email = stephen@hpe.com
license = Apache-2.0
classifier =
    Environment :: HPE MPC
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
  benford

[entry_points]
console_scripts =
    benford = benford.main:main

[pep257]
ignore = D104
